add more code for part 1

--- a/part1/p1.ipynb
+++ b/part1/p1.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from distutils.command.build_scripts import first_line_re\n",
+    "from tkinter.tix import COLUMN\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from webob import second\n",
@@ -36,46 +37,59 @@
     "            self.N = int(first_line.split(',')[0])\n",
     "            self.Q1,self.Q2 = int(second_line.split(',')[0]),int(second_line.split(',')[1])\n",
     "            \n",
-    "        features_left = pd.read_csv(filePath, skiprows=range(2), header=['ID', 'CPUDemand', 'MemoryDemand','payment'])\n",
+    "        self.features = pd.read_csv(filePath, skiprows=range(2), header=None)\n",
+    "        self.features.columns = ['ID', 'CPUDemand', 'MemoryDemand','payment']\n",
     "    \n",
     "    def get_features(self):\n",
     "        return self.features_left\n",
     "    \n",
     "    def __str__(self) -> str:\n",
-    "        return f'N: {self.N}, Q1: {self.Q1}, Q2: {self.Q2}, \\n features_left: {self.features_left}'\n",
+    "        return f'N: {self.N}, CPU Capacity Q1: {self.Q1}, Memort Capacity Q2: {self.Q2}, \\n features_left:\\n{self.features}'\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "header must be integer or list of integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb#ch0000002?line=0'>1</a>\u001b[0m small \u001b[39m=\u001b[39m CloudResourceAllocation(smallFilePath)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb#ch0000002?line=1'>2</a>\u001b[0m \u001b[39m# large = CloudResourceAllocation(largeFilePath)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb#ch0000002?line=2'>3</a>\u001b[0m small\n",
-      "\u001b[1;32m/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb Cell 3\u001b[0m in \u001b[0;36mCloudResourceAllocation.__init__\u001b[0;34m(self, filePath)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb#ch0000002?line=20'>21</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mN \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(first_line\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb#ch0000002?line=21'>22</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mQ1,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mQ2 \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(second_line\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]),\u001b[39mint\u001b[39m(second_line\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m1\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/zhouyun/Desktop/AIML431-A1/part1/p1.ipynb#ch0000002?line=23'>24</a>\u001b[0m features_left \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(filePath, skiprows\u001b[39m=\u001b[39;49m\u001b[39mrange\u001b[39;49m(\u001b[39m2\u001b[39;49m), header\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mID\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mCPUDemand\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mMemoryDemand\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mpayment\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/util/_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[1;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[1;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[1;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[1;32m    310\u001b[0m     )\n\u001b[0;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/io/parsers/readers.py:586\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    571\u001b[0m kwds_defaults \u001b[39m=\u001b[39m _refine_defaults_read(\n\u001b[1;32m    572\u001b[0m     dialect,\n\u001b[1;32m    573\u001b[0m     delimiter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    582\u001b[0m     defaults\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mdelimiter\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m},\n\u001b[1;32m    583\u001b[0m )\n\u001b[1;32m    584\u001b[0m kwds\u001b[39m.\u001b[39mupdate(kwds_defaults)\n\u001b[0;32m--> 586\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/io/parsers/readers.py:482\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    479\u001b[0m _validate_names(kwds\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mnames\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[1;32m    481\u001b[0m \u001b[39m# Create the parser.\u001b[39;00m\n\u001b[0;32m--> 482\u001b[0m parser \u001b[39m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[1;32m    484\u001b[0m \u001b[39mif\u001b[39;00m chunksize \u001b[39mor\u001b[39;00m iterator:\n\u001b[1;32m    485\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/io/parsers/readers.py:811\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    808\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m kwds:\n\u001b[1;32m    809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptions[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m kwds[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m--> 811\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_engine(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine)\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/io/parsers/readers.py:1040\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1036\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1037\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mUnknown engine: \u001b[39m\u001b[39m{\u001b[39;00mengine\u001b[39m}\u001b[39;00m\u001b[39m (valid options are \u001b[39m\u001b[39m{\u001b[39;00mmapping\u001b[39m.\u001b[39mkeys()\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1038\u001b[0m     )\n\u001b[1;32m   1039\u001b[0m \u001b[39m# error: Too many arguments for \"ParserBase\"\u001b[39;00m\n\u001b[0;32m-> 1040\u001b[0m \u001b[39mreturn\u001b[39;00m mapping[engine](\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mf, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions)\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/io/parsers/c_parser_wrapper.py:37\u001b[0m, in \u001b[0;36mCParserWrapper.__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkwds \u001b[39m=\u001b[39m kwds\n\u001b[1;32m     35\u001b[0m kwds \u001b[39m=\u001b[39m kwds\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m---> 37\u001b[0m ParserBase\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(\u001b[39mself\u001b[39;49m, kwds)\n\u001b[1;32m     39\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlow_memory \u001b[39m=\u001b[39m kwds\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mlow_memory\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     41\u001b[0m \u001b[39m# #2442\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[39m# error: Cannot determine type of 'index_col'\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/pkg/lib/python3.9/site-packages/pandas/io/parsers/base_parser.py:164\u001b[0m, in \u001b[0;36mParserBase.__init__\u001b[0;34m(self, kwds)\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mheader, (\u001b[39mlist\u001b[39m, \u001b[39mtuple\u001b[39m, np\u001b[39m.\u001b[39mndarray)):\n\u001b[1;32m    163\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mall\u001b[39m(\u001b[39mmap\u001b[39m(is_integer, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mheader)):\n\u001b[0;32m--> 164\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mheader must be integer or list of integers\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    165\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39many\u001b[39m(i \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mheader):\n\u001b[1;32m    166\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    167\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mcannot specify multi-index header with negative integers\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    168\u001b[0m         )\n",
-      "\u001b[0;31mValueError\u001b[0m: header must be integer or list of integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N: 10, CPU Capacity Q1: 1000, Memort Capacity Q2: 2000, \n",
+      " features_left:\n",
+      "   ID  CPUDemand  MemoryDemand  payment\n",
+      "0   1        158           317      836\n",
+      "1   2        136           280      607\n",
+      "2   3        114            61      724\n",
+      "3   4        203           372      269\n",
+      "4   5          8            11      381\n",
+      "5   6        183           189       24\n",
+      "6   7         66            66      675\n",
+      "7   8         41           391      907\n",
+      "8   9        144           377      962\n",
+      "9  10         36           297      531\n"
      ]
     }
    ],
    "source": [
     "small = CloudResourceAllocation(smallFilePath)\n",
     "# large = CloudResourceAllocation(largeFilePath)\n",
-    "small"
+    "print(small.__str__())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
