Add some print statements

--- a/p1p2/p1p2.ipynb
+++ b/p1p2/p1p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: ortools in /home/zhouyun/.local/lib/python3.9/site-packages (9.4.1874)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /usr/pkg/lib/python3.9/site-packages (from ortools) (1.22.4)\n",
       "Requirement already satisfied: absl-py>=0.13 in /usr/pkg/lib/python3.9/site-packages (from ortools) (0.14.1)\n",
       "Requirement already satisfied: protobuf>=3.19.4 in /usr/pkg/lib/python3.9/site-packages (from ortools) (3.20.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /usr/pkg/lib/python3.9/site-packages (from ortools) (1.22.4)\n",
       "Requirement already satisfied: six in /usr/pkg/lib/python3.9/site-packages (from absl-py>=0.13->ortools) (1.16.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: ortools in /home/zhouyun/.local/lib/python3.9/site-packages (9.4.1874)\n",
-      "Requirement already satisfied: absl-py>=0.13 in /usr/pkg/lib/python3.9/site-packages (from ortools) (0.14.1)\n",
       "Requirement already satisfied: protobuf>=3.19.4 in /usr/pkg/lib/python3.9/site-packages (from ortools) (3.20.1)\n",
+      "Requirement already satisfied: absl-py>=0.13 in /usr/pkg/lib/python3.9/site-packages (from ortools) (0.14.1)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /usr/pkg/lib/python3.9/site-packages (from ortools) (1.22.4)\n",
       "Requirement already satisfied: six in /usr/pkg/lib/python3.9/site-packages (from absl-py>=0.13->ortools) (1.16.0)\n"
      ]
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -166,10 +166,12 @@
     "        if status == pywraplp.Solver.OPTIMAL:\n",
     "            # print 2 constraints: cpu capacity constraint and memory capacity constraint\n",
     "            total_cpu_used , total_memory_used = 0,0\n",
-    "            x_sol_vals_str = \"\"\n",
+    "            x_sol_vals_str, x_sol_vals_is_1 = \"\",[]\n",
     "            for j in range(self.N):\n",
     "                x_temp = self.x[j].solution_value()\n",
     "                x_sol_vals_str += f\"\\t{self.x[j].name()} : {x_temp} \\n\"\n",
+    "                if x_temp == 1:\n",
+    "                    x_sol_vals_is_1.append(self.x[j].name())\n",
     "                # count the total cpu and memory used\n",
     "                total_cpu_used += self.jobs['CPUDemand'][j] * x_temp\n",
     "                total_memory_used += self.jobs['MemoryDemand'][j] * x_temp\n",
@@ -177,7 +179,9 @@
     "            print(f'Objective value(Total Payment) ={self.solver.Objective().Value()}')\n",
     "            print(f\"Total CPU used = {total_cpu_used} out of the CPU Capacity:{self.Q1}\")\n",
     "            print(f\"Total Memory used = {total_memory_used} out of the Memory Capacity:{self.Q2}\")\n",
-    "            print(f\"Solution: (The obtained  xi value): \\n{x_sol_vals_str}\")\n",
+    "            print(f\"Solution: (The obtained  xi values): \\n Value is 1, which means they are selected:\\n\\t{x_sol_vals_is_1} \\nAll:\\n\\t{x_sol_vals_str}\")\n",
+    "            \n",
+    "            \n",
     "            # Statistics.\n",
     "            print('-'*15)\n",
     "            print('Statistics')\n",
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -217,8 +221,11 @@
       "Objective value(Total Payment) =5647.0\n",
       "Total CPU used = 886.0 out of the CPU Capacity:1000\n",
       "Total Memory used = 1989.0 out of the Memory Capacity:2000\n",
-      "Solution: (The obtained  xi value): \n",
-      "\tx[0] : 1.0 \n",
+      "Solution: (The obtained  xi values): \n",
+      " Value is 1, which means they are selected:\n",
+      "\t['x[0]', 'x[1]', 'x[2]', 'x[4]', 'x[5]', 'x[6]', 'x[7]', 'x[8]', 'x[9]'] \n",
+      "All:\n",
+      "\t\tx[0] : 1.0 \n",
       "\tx[1] : 1.0 \n",
       "\tx[2] : 1.0 \n",
       "\tx[3] : 0.0 \n",
@@ -231,7 +238,7 @@
       "\n",
       "---------------\n",
       "Statistics\n",
-      " Problem solved in 6.000000 milliseconds \n",
+      " Problem solved in 5.000000 milliseconds \n",
       " Problem solved in 0 iterations \n",
       " Problem solved in 0 branch-and-bound nodes \n",
       "--------------------------------------------------------------------------------\n",
@@ -251,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -264,8 +271,11 @@
       "Objective value(Total Payment) =29459.0\n",
       "Total CPU used = 9997.0 out of the CPU Capacity:10000\n",
       "Total Memory used = 9859.0 out of the Memory Capacity:10000\n",
-      "Solution: (The obtained  xi value): \n",
-      "\tx[0] : 0.0 \n",
+      "Solution: (The obtained  xi values): \n",
+      " Value is 1, which means they are selected:\n",
+      "\t['x[4]', 'x[34]', 'x[71]', 'x[147]', 'x[162]', 'x[176]', 'x[178]', 'x[199]', 'x[244]', 'x[284]', 'x[320]', 'x[326]', 'x[346]', 'x[400]', 'x[410]', 'x[466]', 'x[508]', 'x[511]', 'x[539]', 'x[625]', 'x[679]', 'x[680]', 'x[712]', 'x[751]', 'x[759]', 'x[767]', 'x[862]', 'x[866]', 'x[897]', 'x[915]', 'x[919]', 'x[941]', 'x[969]', 'x[982]', 'x[985]'] \n",
+      "All:\n",
+      "\t\tx[0] : 0.0 \n",
       "\tx[1] : 0.0 \n",
       "\tx[2] : 0.0 \n",
       "\tx[3] : 0.0 \n",
@@ -1268,7 +1278,7 @@
       "\n",
       "---------------\n",
       "Statistics\n",
-      " Problem solved in 359.000000 milliseconds \n",
+      " Problem solved in 250.000000 milliseconds \n",
       " Problem solved in 2011 iterations \n",
       " Problem solved in 290 branch-and-bound nodes \n",
       "--------------------------------------------------------------------------------\n"
@@ -1286,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
