--- a/p1p2/p1p2.ipynb
+++ b/p1p2/p1p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -11,14 +11,14 @@
      "text": [
       "Requirement already satisfied: ortools in /home/zhouyun/.local/lib/python3.9/site-packages (9.4.1874)\n",
       "Requirement already satisfied: absl-py>=0.13 in /usr/pkg/lib/python3.9/site-packages (from ortools) (0.14.1)\n",
-      "Requirement already satisfied: protobuf>=3.19.4 in /usr/pkg/lib/python3.9/site-packages (from ortools) (3.20.1)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /usr/pkg/lib/python3.9/site-packages (from ortools) (1.22.4)\n",
+      "Requirement already satisfied: protobuf>=3.19.4 in /usr/pkg/lib/python3.9/site-packages (from ortools) (3.20.1)\n",
       "Requirement already satisfied: six in /usr/pkg/lib/python3.9/site-packages (from absl-py>=0.13->ortools) (1.16.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: ortools in /home/zhouyun/.local/lib/python3.9/site-packages (9.4.1874)\n",
       "Requirement already satisfied: protobuf>=3.19.4 in /usr/pkg/lib/python3.9/site-packages (from ortools) (3.20.1)\n",
-      "Requirement already satisfied: absl-py>=0.13 in /usr/pkg/lib/python3.9/site-packages (from ortools) (0.14.1)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /usr/pkg/lib/python3.9/site-packages (from ortools) (1.22.4)\n",
+      "Requirement already satisfied: absl-py>=0.13 in /usr/pkg/lib/python3.9/site-packages (from ortools) (0.14.1)\n",
       "Requirement already satisfied: six in /usr/pkg/lib/python3.9/site-packages (from absl-py>=0.13->ortools) (1.16.0)\n"
      ]
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
       "\n",
       "---------------\n",
       "Statistics\n",
-      " Problem solved in 5.000000 milliseconds \n",
+      " Problem solved in 7.000000 milliseconds \n",
       " Problem solved in 0 iterations \n",
       " Problem solved in 0 branch-and-bound nodes \n",
       "--------------------------------------------------------------------------------\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
       "\n",
       "---------------\n",
       "Statistics\n",
-      " Problem solved in 250.000000 milliseconds \n",
+      " Problem solved in 256.000000 milliseconds \n",
       " Problem solved in 2011 iterations \n",
       " Problem solved in 290 branch-and-bound nodes \n",
       "--------------------------------------------------------------------------------\n"
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1575,8 @@
     "    \n",
     "    # define the efficiency by adding payment per cpuDemand and payment per memoryDemand\n",
     "    efficiency = [ds.get_jobs().iloc[i]['payment'] / ds.get_jobs().iloc[i]['CPUDemand'] \n",
-    "                    + ds.get_jobs().iloc[i]['payment'] / ds.get_jobs().iloc[i]['MemoryDemand'] for i in range(len(ds.get_jobs()))]\n",
+    "                    + ds.get_jobs().iloc[i]['payment'] / ds.get_jobs().iloc[i]['MemoryDemand'] \n",
+    "                    for i in range(len(ds.get_jobs()))]\n",
     "    # add the efficiency to the dataset\n",
     "    ds.jobs['sorting criterion'] = efficiency\n",
     "    # sort the jobs by sorting criterion\n",
@@ -1608,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
